Imagens no html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Projeto Pessoal Blog</h1>
+    <h1>Blog Kuromi</h1>
+    <div>
+        <img src="img/kuromi1.jpg"/>
+        <img src="img/kuromi2.jpg"/>
+        <img src="img/kuromi3.jpg"/>
+    </div>
 </body>
 </html>
