--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <Link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    <h1>Blog Kuromi</h1>
-    <div>
+    <h1 >BLOG KUROMI</h1>
+    <div class="container">
         <img src="img/kuromi1.jpg"/>
         <img src="img/kuromi2.jpg"/>
         <img src="img/kuromi3.jpg"/>
