--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="titulo">
     <h1 >BLOG KUROMI</h1>
+</div>
     <div class="container">
         <img src="img/kuromi1.jpg"/>
         <img src="img/kuromi2.jpg"/>
