--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
     <title>Document</title>
 </head>
 <body>
+    <center>
     <div class="titulo">
-    <h1 >BLOG KUROMI</h1>
+    <h1>BLOG KUROMI</h1>
 </div>
+</center>
     <div class="container">
         <img src="img/kuromi1.jpg"/>
         <img src="img/kuromi2.jpg"/>
